fix: css to work on smaller screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,13 +27,15 @@ $paragraph-font-size: 15px;
 
 .app {
   min-height: 100dvh;
-  padding: 32px 0px;
+  min-width: fit-content;
+  padding: 32px 16px;
   background-color: $app-bg-color;
 }
 
 .card {
   display: grid;
   width: 280px;
+  flex-shrink: 0;
   background-color: $card-bg-color;
   border-radius: 16px;
   padding: 16px 16px 32px;
